Refactor pytest configuration to use 'anemos' as the pythonpath

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -111,9 +111,8 @@ executionEnvironments = [
 ]
 
 [tool.pytest.ini_options]
-addopts = "--cov-report xml:coverage.xml --cov src --cov-fail-under 0 --cov-append -m 'not integration'"
 pythonpath = [
-  "src"
+  "anemos"
 ]
 testpaths = "tests"
 junit_family = "xunit2"
