Refactor dependencies in pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,4 @@
+[project]
 name = "anemos"
 version = "0.1.1"
 description = "package description"
@@ -5,3 +6,7 @@ authors = ["Kengo Handa <kengo.handa@solufit.net>"]
 license = "MIT"
 readme = "README.md"
 repository = "https://github.com/solufit/anemos-py"
+
+dependencies = [
+    "requests ~= 2.23.0",
+]
