--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -10,7 +10,7 @@
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
 	// "forwardPorts": [],
 	// Use 'postCreateCommand' to run commands after the container is created.
-	"postCreateCommand": "pip install --user -r ./requirements.txt",
+	"postCreateCommand": "pip install --user -r ./requirements.txt && cp .pypirc ~/.pypirc",
 	// Configure tool-specific properties.
 	"customizations": {
 		"python": {
